added spdlog and quick and dirty benchmarking

--- a/project/VS2010Express/XBMC.vcxproj
+++ b/project/VS2010Express/XBMC.vcxproj
@@ -859,6 +859,32 @@
     <ClInclude Include="..\..\xbmc\contrib\kissfft\kiss_fft.h" />
     <ClInclude Include="..\..\xbmc\contrib\kissfft\kiss_fftr.h" />
     <ClInclude Include="..\..\xbmc\contrib\kissfft\_kiss_fft_guts.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\async_logger.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\common.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\async_logger_impl.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\async_log_helper.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\file_helper.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\format.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\line_logger.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\logger_impl.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\log_msg.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\mpmc_bounded_q.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\null_mutex.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\os.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\pattern_formatter_impl.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\registry.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\spdlog_impl.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\formatter.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\logger.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\base_sink.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\file_sinks.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\null_sink.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\ostream_sink.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\sink.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\stdout_sinks.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\syslog_sink.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\spdlog.h" />
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\tweakme.h" />
     <ClInclude Include="..\..\xbmc\cores\DataCacheCore.h" />
     <ClInclude Include="..\..\xbmc\cores\AudioEngine\AEFactory.h" />
     <ClInclude Include="..\..\xbmc\cores\AudioEngine\AEResampleFactory.h" />
