--- a/project/VS2010Express/XBMC.vcxproj.filters
+++ b/project/VS2010Express/XBMC.vcxproj.filters
@@ -355,6 +355,15 @@
     <Filter Include="messaging">
       <UniqueIdentifier>{378b3a72-20d2-4482-8dbb-91f041290ceb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="contrib\spdlog">
+      <UniqueIdentifier>{54ce6964-2473-4672-b494-4f3b200df54c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="contrib\spdlog\details">
+      <UniqueIdentifier>{bcdfbc7d-7457-4802-bdec-6bbbf566c1a7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="contrib\spdlog\sinks">
+      <UniqueIdentifier>{2ce05353-b09b-4e10-80a9-079c46d5dc35}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\xbmc\win32\pch.cpp">
@@ -6019,6 +6028,84 @@
     </ClInclude>
     <ClInclude Include="..\..\xbmc\messaging\IMessageTarget.h">
       <Filter>messaging</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\async_logger.h">
+      <Filter>contrib\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\common.h">
+      <Filter>contrib\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\formatter.h">
+      <Filter>contrib\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\logger.h">
+      <Filter>contrib\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\spdlog.h">
+      <Filter>contrib\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\tweakme.h">
+      <Filter>contrib\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\async_log_helper.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\async_logger_impl.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\file_helper.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\format.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\line_logger.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\log_msg.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\logger_impl.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\mpmc_bounded_q.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\null_mutex.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\os.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\pattern_formatter_impl.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\registry.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\details\spdlog_impl.h">
+      <Filter>contrib\spdlog\details</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\base_sink.h">
+      <Filter>contrib\spdlog\sinks</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\file_sinks.h">
+      <Filter>contrib\spdlog\sinks</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\null_sink.h">
+      <Filter>contrib\spdlog\sinks</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\ostream_sink.h">
+      <Filter>contrib\spdlog\sinks</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\sink.h">
+      <Filter>contrib\spdlog\sinks</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\stdout_sinks.h">
+      <Filter>contrib\spdlog\sinks</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\contrib\spdlog\sinks\syslog_sink.h">
+      <Filter>contrib\spdlog\sinks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
